[package]
name = "fm-xml-export-exploder"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs_io = "0.1.7"
rayon = "1.11.0"
quick-xml = "0.37.5"
regex = "1.11.2"
clap = { version = "4.5.48", features = ["derive"] }
anyhow = "1.0.100"
strum_macros = "0.27.2"

[dev-dependencies]
walkdir = "2.5.0"
insta = "1.43.2"
similar-asserts = "1.7.0"
