[package]
name = "fm-xml-export-exploder"
version = "0.6.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding_rs_io = "0.1.7"
rayon = "1.11.0"
quick-xml = "0.39.2"
regex = "1.12.3"
clap = { version = "4.6.0", features = ["derive"] }
anyhow = "1.0.102"
strum_macros = "0.28.0"

[dev-dependencies]
walkdir = "2.5.0"
insta = "1.46.3"
similar-asserts = "1.7.0"
